--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "우아한테크코스 프리코스 자동차 경주 미션",
   "type": "module",
   "dependencies": {
-    "@woowacourse/mission-utils": "2.1.1",
+    "@woowacourse/mission-utils": "^2.1.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
