--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@types/jest": "^29.5.7",
     "babel-jest": "^29.7.0",
-    "jest": "29.6.0"
+    "jest": "^29.7.0"
   },
   "scripts": {
     "test": "jest --detectOpenHandles"
