--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prettier": "^3.0.3"
   },
   "scripts": {
-    "test": "jest --detectOpenHandles"
+    "test": "jest --detectOpenHandles --watch"
   },
   "keywords": [],
   "author": "woowacourse",
