--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
     "babel-jest": "^29.7.0",
-    "jest": "29.6.0"
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "jest": "29.6.0",
+    "prettier": "^3.2.4"
   },
   "scripts": {
     "test": "jest --detectOpenHandles"
